--- a/packages/map-tools/_SpecRunner.html
+++ b/packages/map-tools/_SpecRunner.html
@@ -26,9 +26,9 @@
   
   <script src="tests/SetUpTests.js"></script>
   
-  <script src="node_modules/dojo/dojo.js"></script>
+  <script src="../../node_modules/dojo/dojo.js"></script>
   
-  <script src="tests/jasmineAMDErrorChecking.js"></script>
+  <script src="../../common/testing/jasmineAMDErrorChecking.js"></script>
   
   <script src="tests/spec/SpecMapView.js"></script>
   
