--- a/packages/mouse-trap/_SpecRunner.html
+++ b/packages/mouse-trap/_SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner</title>
-  <link rel="shortcut icon" type="image/png" href=".grunt\grunt-contrib-jasmine\jasmine_favicon.png">
+  <link rel="shortcut icon" type="image/png" href=".grunt/grunt-contrib-jasmine/jasmine_favicon.png">
 
   <link rel="stylesheet" type="text/css" href=".grunt/grunt-contrib-jasmine/jasmine.css">
 
@@ -26,9 +26,9 @@
   
   <script src="tests/SetUpTests.js"></script>
   
-  <script src="node_modules/dojo/dojo.js"></script>
+  <script src="../../node_modules/dojo/dojo.js"></script>
   
-  <script src="tests/jasmineAMDErrorChecking.js"></script>
+  <script src="../../common/testing/jasmineAMDErrorChecking.js"></script>
   
   <script src="tests/spec/SpecMouseTrap.js"></script>
   
