--- a/packages/map-tools/tests/ExtentRouterTests.html
+++ b/packages/map-tools/tests/ExtentRouterTests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ExtentRouter Tests</title>
-    <link rel="stylesheet" href="../node_modules/arcgis-js-api/css/main.css">
+    <link rel="stylesheet" href="../../../node_modules/arcgis-js-api/css/main.css">
     <link rel="stylesheet" href="../resources/MapView.css">
     <style>
         .esri-view {
@@ -11,31 +11,10 @@
         }
     </style>
 
-    <script type="text/javascript" src="../node_modules/dojo/dojo.js"></script>
+    <script type="text/javascript" src="../../../common/testing/SetUpTests.js"></script>
+    <script type="text/javascript" src="../../../node_modules/dojo/dojo.js"></script>
     <script type="text/javascript">
-        const projectUrl = location.pathname.replace(/\/[^\/]+$/, '') + '/';
-
-        require({
-            packages: [{
-                name: 'map-tools',
-                location: projectUrl + '..'
-            }, {
-                name: 'maquette',
-                location: projectUrl + '../node_modules/maquette',
-                main: 'dist/maquette.umd'
-            }, {
-                name: 'maquette-jsx',
-                location: projectUrl + '../node_modules/maquette-jsx',
-                main: 'dist/maquette-jsx.umd'
-            }, {
-                name: 'maquette-css-transitions',
-                location: projectUrl + '../node_modules/maquette-css-transitions',
-                main: 'dist/maquette-css-transitions.umd'
-            }, {
-                name: 'esri',
-                location: projectUrl + '../node_modules/arcgis-js-api'
-            }]
-        },[
+        require([
             'esri/geometry/Point',
             'esri/Map',
             'esri/views/MapView',
@@ -52,9 +31,9 @@
             extentRouter,
             AGRCMapView
         ) {
-            let map = new Map({basemap: 'streets'});
+            const map = new Map({ basemap: 'streets' });
 
-            mapView = new MapView({
+            const mapView = new MapView({
                 map,
                 container: 'mapDiv'
             });
